Fixed bug on register.php, added loading and responses to resgitro in front-end, fixed responsiveness on mobile

--- a/assets/css/responsive_style.css
+++ b/assets/css/responsive_style.css
@@ -18,8 +18,7 @@
         line-height: 1;
         font-size: 6px;
         width: 70px;     
-        padding-right: 0px;
-        padding-left: 0px;
+        padding: 0px !important;
         height: 30px;
     }
 
@@ -67,7 +66,9 @@
         width:10px;
         z-index: 1100;
     }    
-
+    .close-button {
+        padding: 10px !important;
+    }
 }
 
 @media  (min-width: 321px)  and (max-width: 768px) {
