--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,9 +160,16 @@ body{
   padding-top: 15px;
 }
 
+/* Status response */
 .error{
   color: red;
-  margin: 10px 10px 10px 10px;
+  margin: 15px;
+}
+
+.response {
+  color: green;
+  margin: 10px;
+  font-size: 1em;
 }
 
 /* Sticky footer styles
@@ -196,11 +203,12 @@ body{
 
 /** Estilos para  el panel de registro **/
 .registro_instrucciones{
-  margin: 10px 0 20px 0;
+  margin: 5px 0 10px 0;
 }
-.registro_instrucciones > p{
+.registro_instrucciones > span{
   font-size: 1.5em;
 }
+
 /** Responsive Re-captcha **/
 .recaptcha {
     transform: scale(0.77);
@@ -216,3 +224,126 @@ body{
 .modal-footer>:not(:last-child) {
   margin-right: 0;
 }
+
+/** Progress bars **/
+
+#registro_loading {
+  font-size: 2em;
+}
+
+.progress {
+  box-shadow: none;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 4px;
+  overflow: hidden;
+  margin-bottom: 1rem;
+  background-color: #eee; }
+  .progress .progress-bar {
+    box-shadow: none;
+    height: 4px;
+    border-radius: 0;
+    background-color: #0d47a1; }
+  .progress .progress-bar-animated {
+    -webkit-transition: width 2s ease-in-out;
+    transition: width 2s ease-in-out; }
+  .progress .indeterminate {
+    background-color: #90caf9; }
+    .progress .indeterminate:before {
+      content: '';
+      position: absolute;
+      background-color: inherit;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      will-change: left, right;
+      -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      -moz-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      -ms-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      -o-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
+    .progress .indeterminate:after {
+      content: '';
+      position: absolute;
+      background-color: inherit;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      will-change: left, right;
+      -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      -moz-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      -ms-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      -o-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      -webkit-animation-delay: 1.15s;
+      -moz-animation-delay: 1.15s;
+      -ms-animation-delay: 1.15s;
+      -o-animation-delay: 1.15s;
+      animation-delay: 1.15s; }
+
+@-webkit-keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+
+@-moz-keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+
+@keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+
+@-webkit-keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
+
+@-moz-keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
+
+@keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
